change endpoint behavior for favorites
